# ydm

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: apiserver.h  constants.h  downloaditem.h  downloadmanager.h  downloadworker.h  ffmpegupdateworker.h  genericfileworker.h  iconhelper.h  instanceserver.h  mainwindow.h  persistence.h  scheduleitem.h  themeprovider.h  utils.h  ytdlpupdateworker.h
include/widgets/: backgroundloader.h  glossyprogressbar.h  scheduledialog.h  sidebarbutton.h  statbox.h  statchip.h  statusbadge.h  ydmdialog.h
resources/: resources.qrc
src/: apiserver.cpp  constants.cpp  downloaditem.cpp  downloadmanager.cpp  downloadworker.cpp  ffmpegupdateworker.cpp  genericfileworker.cpp  iconhelper.cpp  instanceserver.cpp  main.cpp  mainwindow.cpp  mainwindow_build.cpp  mainwindow_pages.cpp  mainwindow_slots.cpp  persistence.cpp  scheduleitem.cpp  themeprovider.cpp  utils.cpp  ytdlpupdateworker.cpp
src/widgets/: backgroundloader.cpp  glossyprogressbar.cpp  scheduledialog.cpp  sidebarbutton.cpp  statbox.cpp  statchip.cpp  statusbadge.cpp  ydmdialog.cpp
